objects/OpportunityLineItem/fields/CategoryID__c.field-meta.xml
<CustomField>
    <fullName>CategoryID__c</fullName>
    <label>CategoryID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>