objects/OpportunityLineItem/fields/CurrencyPrice__c.field-meta.xml
<CustomField>
    <fullName>CurrencyPrice__c</fullName>
    <label>CurrencyPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>