objects/OpportunityLineItem/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <formula>Opportunity.Account.Parent.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Id</label>
    <type>Text</type>
</CustomField>