objects/OpportunityLineItem/fields/DeliveredQty__c.field-meta.xml
<CustomField>
    <fullName>DeliveredQty__c</fullName>
    <label>DeliveredQty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>