objects/OpportunityLineItem/fields/DeliveredValue__c.field-meta.xml
<CustomField>
    <fullName>DeliveredValue__c</fullName>
    <formula>TotalPrice* DeliveredQty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DeliveredValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>