objects/OpportunityLineItem/fields/Extended_Sales_Description__c.field-meta.xml
<CustomField>
    <fullName>Extended_Sales_Description__c</fullName>
    <label>Extended Sales Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>