objects/OpportunityLineItem/fields/GP_Margin__c.field-meta.xml
<CustomField>
    <fullName>GP_Margin__c</fullName>
    <description>IF(UnitPrice &lt;&gt; 0 ,  Discount__c -  Product_Cost_Price__c ,  0)</description>
    <formula>(TotalPrice - Product_Cost_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>