objects/OpportunityLineItem/fields/Is_Other_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Other_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Other Product</label>
    <type>Checkbox</type>
</CustomField>