objects/OpportunityLineItem/fields/ItemLineDescription__c.field-meta.xml
<CustomField>
    <fullName>ItemLineDescription__c</fullName>
    <label>ItemLineDescription</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>