objects/OpportunityLineItem/fields/Maintenance_Reactive_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Reactive_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance &amp; Reactive Sheet</label>
    <referenceTo>Service_Sheet_STD__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>