objects/OpportunityLineItem/fields/MarginPercent__c.field-meta.xml
<CustomField>
    <fullName>MarginPercent__c</fullName>
    <label>MarginPercent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>