objects/OpportunityLineItem/fields/Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Outstanding__c</fullName>
    <formula>Quantity- DeliveredQty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>