objects/OpportunityLineItem/fields/Profit_Price__c.field-meta.xml
<CustomField>
    <fullName>Profit_Price__c</fullName>
    <formula>IF( UnitPrice  - PricebookEntry.Product2.Product_Cost__c &gt; 0.0 , UnitPrice  - PricebookEntry.Product2.Product_Cost__c , 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>