objects/OpportunityLineItem/fields/Quantity_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Shipped__c</fullName>
    <label>Quantity Shipped</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>