objects/OpportunityLineItem/fields/SalesDescription__c.field-meta.xml
<CustomField>
    <fullName>SalesDescription__c</fullName>
    <label>SalesDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>