objects/OpportunityLineItem/fields/SalesGroup__c.field-meta.xml
<CustomField>
    <fullName>SalesGroup__c</fullName>
    <label>SalesGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>