objects/OpportunityLineItem/fields/SalesOption__c.field-meta.xml
<CustomField>
    <fullName>SalesOption__c</fullName>
    <label>SalesOption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>