objects/OpportunityLineItem/fields/Service_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Service_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Sheet</label>
    <referenceTo>Engineer_Checklist__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>