objects/OpportunityLineItem/fields/Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Id__c</fullName>
    <formula>Opportunity.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Id</label>
    <type>Text</type>
</CustomField>