objects/OpportunityLineItem/fields/Total_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Price__c</fullName>
    <formula>Product_Cost_Price__c  *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>