objects/OpportunityLineItem/fields/Vat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Vat_Rate__c</fullName>
    <defaultValue>0.2</defaultValue>
    <label>Vat Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>