objects/OpportunityLineItem/fields/Xero_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Xero_Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Xero Account Id</label>
    <referenceTo>Xero_Account__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>